# ChangeLog for dev-util/abi-compliance-checker
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/abi-compliance-checker/ChangeLog,v 1.6 2013/10/14 21:05:29 mgorny Exp $

  14 Oct 2013; Michał Górny <mgorny@gentoo.org>
  abi-compliance-checker-9999.ebuild:
  Switch to git-r3.

*abi-compliance-checker-1.98.8 (11 Feb 2013)

  11 Feb 2013; Michał Górny <mgorny@gentoo.org>
  +abi-compliance-checker-1.98.8.ebuild:
  Version bump.

*abi-compliance-checker-1.98.7 (07 Jan 2013)

  07 Jan 2013; Michał Górny <mgorny@gentoo.org>
  +abi-compliance-checker-1.98.7.ebuild, -abi-compliance-checker-1.98.2.ebuild:
  Version bump.

*abi-compliance-checker-9999 (15 Dec 2012)

  15 Dec 2012; Michał Górny <mgorny@gentoo.org>
  +abi-compliance-checker-9999.ebuild:
  Import the live ebuild.

*abi-compliance-checker-1.98.4 (22 Oct 2012)

  22 Oct 2012; Michał Górny <mgorny@gentoo.org>
  +abi-compliance-checker-1.98.4.ebuild:
  Version bump.

*abi-compliance-checker-1.98.2 (17 Jul 2012)

  17 Jul 2012; Michał Górny <mgorny@gentoo.org>
  +abi-compliance-checker-1.98.2.ebuild, +metadata.xml:
  Introduce an ebuild for abi-compliance-checker; a tool to check two library
  versions for ABI & API compliance.