@@ -4,28 +4,30 @@ Hash: SHA256
 DIST abi-compliance-checker-1.98.4.tar.gz 258639 SHA256 889f26c3c58c36afbaf1e7bde7f49107f25231acf901ce85a10f93812755401b SHA512 31773a26911b89a2e472fe6b2b9504d4cd196a193765593cec8d7f8a4dbc1ceea7e70585ec8b6d73f2664ca53bafd1c85657c3c4553da3f7cc8e2350e84ce052 WHIRLPOOL 1475e14bb42de5e7d2fa934dec6f1333f72d4e493a87d352a0da4a2e326b75648d1f146e90743f20d9bfd066911b2dd1e568ce98a560dfd14b3f655a303303ff
 DIST abi-compliance-checker-1.98.7.tar.gz 256069 SHA256 b1198a4c726ead9d02d1ab1fdbc384f72c34d43e4d29b8438d1b1460aca73699 SHA512 a925c12b0cebc72ee6af84ea1663a8f3e2333e130c1bff494866a54efc644a1825bfc5ce84d5c183e4031dc4037847b42a808099e127874e0184e83b33d499ec WHIRLPOOL 17c6f92d889e4236abc1607dfc3547b3f20d74084be562e390a177d345026fc539056e302ef0b9a682e6e0203502010af5ec900011a8077790bd1688c680081d
 DIST abi-compliance-checker-1.98.8.tar.gz 259591 SHA256 e3850394b8b8c1e6bad5e4136fc83a8ed8dab9f429c0f6a45cf3d1a7351742cb SHA512 b65d8ad2050e51b15c26e999886ec9b23aee1e7ce3836fc6ede7201f0831a0a8070317908fa33f68fcb552ed997b2949ecb6c663066d307cb1b5edad0bfbb700 WHIRLPOOL 9679fec45ae6e0b6c819ff55b06bd1d5d7bc578dd446498b0e5334d7ffb99a9d5a9d532a0c17586fccd323c027ee89c09490311cfcdab0ab461ab5b0c91f4a46
+DIST abi-compliance-checker-1.99.9.tar.gz 272227 SHA256 52b0daca89fcda73cde126497c8015ca823417074ba02fcff68b7acf2f45e516 SHA512 bf3530463a93ed453c9479fa2907e8e68d34949e71bb552fabc43b37f7fa562a49339adc86de09596a13ccd5586bfc5fcb5df1d03ffa04020d9ac3622025b2be WHIRLPOOL 0d62b5c4b14e814231cfa06ffdcfd7fa44fecd2d154bf57b0abb13f2540f755b3de3179fd9d3c34720329f674285877b3b4e43dc904b9b1ae1c7b3c88467094e
 EBUILD abi-compliance-checker-1.98.4.ebuild 625 SHA256 a2e1d138a695406fdebe48a631ebe06da531c216c2bf00ab7c91b2026ff6f901 SHA512 340a0b0f71a0bae3329086b25d06cff037e17ab23c89acd5aa276c220b2538b093a52e39690aef4b172c9f9edb5f98005b64e77ab847d8b0aeb9d99128d345a0 WHIRLPOOL ddff34b7d46d3a0b8171b52669ce1158acbdf99e1209a3b2030614f55fb2a6532cfda326625d7864cf33b35619e645182941b30d4b778fd7f38049fe150da848
 EBUILD abi-compliance-checker-1.98.7.ebuild 652 SHA256 78a352d2b111d3273f504e0f421a55ac226a22cb93e362b3bbe73ce4dcba676c SHA512 430dced4189d3aaff361c51de6b956dc95499450e1595605020a29c70750d447960bb5b23b98a5746eda18e40e40abc986a16c0871d253e4052dec6d05c13169 WHIRLPOOL 6891f77af7a36519a056560d185f912414df511631414964ab0f2205020aedb466312bfe705fd26d615723a88b815e5aaed2f91ab94834a0a35e9edcad65d461
 EBUILD abi-compliance-checker-1.98.8.ebuild 652 SHA256 ce9d0128c07e3a2e6cd148b107e8dffc723cf6f52b941bb4616f9d863007a974 SHA512 126e182043a96cf877e5aacf20686b84e8cab0a49e49364d5a9289ee56fad3023c3a9c586de786d9c48a35c926fdcc39c49d4f4f8801d732e538363416bbcd09 WHIRLPOOL 9d7750538bafa5355387567ed0c32e63abcf211668c413f3f9b1eeb06c3071b7d6ce0d90110035d0bb3d6da517bfeea6ad09a2987b84e03f87ea2bb02923020d
-EBUILD abi-compliance-checker-9999.ebuild 772 SHA256 3f5101e6a83acc82496e8d5e21396ddf05bf67f82a903e22c487ca765f5ced8e SHA512 c9b9fe42799028615427cadc3cda5f1f7c100c885e85eb5e91dfa0c1ac007f5c438dd7d8cd4df450314dedae0a7f532dd8ce14b99af0c0629532cf2e44a8f8d3 WHIRLPOOL b247ac037a7277a7c69c1beaead4df592c9ecff881c32aecdb8e809e33f7cc91a575903ba91b0135ef9dd01fa46281e45e99c3960d76f3970f45ea92c1061764
-MISC ChangeLog 1272 SHA256 2cb776e5c49fb9912607ba9dfc816cc8b336dbe6b2f4cbc6cbe116b3d80fc766 SHA512 abaa699a9d03d1f8f536f27fd5a98f681aad21236a3d0989f8bca8e5b9d8b23072918cca74ef69c319ed1da8b870b7586d6e37a611697fb0cb384e88b04686b1 WHIRLPOOL 33017b4305c5c0dec435787a9207196a8a881f2f8c1fb4d23a965d9d939597fbe9d855aa41200077bda92c766ca26ccbe64f217f1f180645fdd50a47aee2fd07
+EBUILD abi-compliance-checker-1.99.9.ebuild 652 SHA256 2deb47d231c5dc68e07d1ebad5bf694975adf17595e726b3f12b20b347636f99 SHA512 8a759d2c0b26e99396c272ab0d3792810fe3f5ffc744af25b5bdb2e7baf2b7ef41ffe1d1a1160d1453dbe7d61beb93efac812df755efe8311d9e93fe59f7e40c WHIRLPOOL 05ee4496fab87452a744a43a6de7a8cbafca318ec0c8fbc455d5abdd80ea67dfd391e8964f586e638dcb73d76515e3e05e71fccb2b0d943537dafcdbb9c34a82
+EBUILD abi-compliance-checker-9999.ebuild 799 SHA256 caf2f0971c77dad45afee9467c52f4ed1bf0c46fbfd9bfe1639b50f95483be2d SHA512 b6ed0947fc5afd951ad210138c6b3c808613ade774924db13c2bfdeb0e3b272f1ee390b94e45343a3e0ab0033f1475e725057feb434c0b1e16696577845d3c4e WHIRLPOOL 46facf534fb15880c2a20c3e514ab9d774b6eb1307fb01778a358b7a449ddcbaec2c08ce53226ed453962f6390609491030866b90f4bbcfc6c8cb95aef6c0910
+MISC ChangeLog 1485 SHA256 e9e00845c684ad79409d6f295c60a89aa35032200ca571fc9eccfacfa6d4a655 SHA512 be4513de37319a383fd6d803c0969e65415f3c29705294b8efb8e76ba5f75f3db0030ad805f97758130c89ddcd05530d9ab1af5608fc451d2abd54ab945562af WHIRLPOOL 73846a0e3745a17f460e5e164154dcef7fb3ea7cf249fb9b531c41b38ab2af3117be71ac90b6ca384d4fce4909b6b6bdd4184b8f4431557a385fd066bd3abec2
 MISC metadata.xml 233 SHA256 fd88d74157f79eb4a06067443b7138cfb56fe1c66bfa5dfe72bda038ea5a9dda SHA512 6676f74cc1b612ba4f95101b64570f257e4b37cfd803a987e3afd9e12ef9b1480918c5d6e4fa955b8447eba9e319c94aac11abe247187870406986b476b154e8 WHIRLPOOL 3c1f192d1fb5e213e407a70a7be417170b651f3049b32ddf1f6b1c1983dedbcb498fa92eb96a41463c0ff0754044930150f0e5940708a6584923e12b86200349
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJSXFykXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTqFZEXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOK8sQANZa+tDK7w2wBHqJ+wC7g80E
-F+7xQnPEbyuXctGXTbG9fXeLSM5HndiBFwS/JqS5m2l8ZLcOfIKsG1HBWArsE1IU
-gxXxNorRvaPVauBPrMPykSc3GAWjHVW/uv80rB0JMX4VvmvNhfICNWFkhrdkZocA
-JMSxJ1+C3US8mvf30EhhLZl6j6KPD83EOcutq3+Ob3MHBsRMI1KnD9wqUDBh/aep
-Qmi103J5kEAJTaxQt+7mZuHKUFLuWZsaJbR+cWBYOtTzH/+uTRfp/ihGemle2f/x
-NWz9JnrDAbFqRXZidGnt0xuFssj36k5JMUjR3Q71hmeBgXdU51XMDEgaUmlsR6+F
-p0fj21BQD155mYaakiCiIs/Nd1gNgRaZJMTXhWF7AvEwLzz2+yYb7Ydf6wDi77Vq
-k/DMOj0FiSm2Jz3JgFUJAdVsVQ78/VL3A6Y4YEFOAXCw4vTRJZU4I9UwOkshj2/K
-qohCl8QRf6gjMyDibqAFTQlVNXTot3Qr7K7vfBw2gJynjRjqFMxSC3BxuR0slY7C
-/Fi4lSANdN0zHKXycMR2q0n7pguRG5d9EQVMVLCnY8AFowWJMRlNh+WmX3wSvfM5
-Q4JQNwbY7gwPKUdSWA+Gad1+n3VaOeVIHW+FmNrrqeEyZAjP4bY7z25pRbuad067
-9djNu08BzB+5aebh+oqd
-=C+fH
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOj14P/3gzO5VkOdx6ld3a5jpDY2N9
+Zmtp4Rb+gItQ24nESgBLmRmHscuVAcdfUruQ9C3CRzRTK3urk6qt1Uj2aVcdXb/a
+G5lWIpIlsrz23AFx0HqONoKZZbzlISGPkRI3RYosoKBCu6x74t9ba6rbqERrZjhL
+p1L6+KstImtsq8rIzPBJQ3FPT205EZhCGoyYoC7hm5uc+e/LYI0KNE/Lf4q9atHB
+KWAHSUalXQRLvGaNYxv4+UYwTplgN7vtqG/22lOsnErOfGJFDVN2jdNmwTmIJ4ro
+ab3yKrMMUTnt1hCRCj+CsAXP/3kCuUB6X3incHsCEF10yoIX2bFb4honY2JnkMUe
+I8DV1EIZfIHckobfmzuvbT/GEHm4uIBO/6xSW7Ix6P1CyWLzP6AVmB2g013jUQHf
+fK27zGoaC4TKtZ3wyHJ7EPfw0vDM0XcSULDTOoge3PTx6VMvI6LPiNXNIXeEBCmj
+Tlaj7VEtK+chaVXMCbYdKiypLuJDJGlm6SyAWnrkUwmsZUqBhl6Cv+Rn+aOH2R1e
+aBuvwErMoBTPCGz84c9cPGkK+UYCq9Nu1gXQZyN8DnOhrFVZcGG2r9Ajwd/2VVhv
+9PssnuF86zSYudtdB5GcLtyZ9A69tGayYHp6ZyPAJ+u0TqFX59bBYCMO3cXgC9Iz
+efXj5g7G74PFg34/NiSC
+=6TrE
 -----END PGP SIGNATURE-----
