@@ -1,0 +1,9 @@
+DEFINED_PHASES=install
+DESCRIPTION=A tool for checking backward compatibility of a C/C++ library
+EAPI=5
+HOMEPAGE=http://ispras.linuxbase.org/index.php/ABI_compliance_checker
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+SLOT=0
+SRC_URI=https://github.com/lvc/abi-compliance-checker/archive/1.99.9.tar.gz -> abi-compliance-checker-1.99.9.tar.gz
+_md5_=16356776457a4f6d2e1b6a86d9fc8373
